Breadcrumb small whitespace fix

--- a/styles/components/breadcrumb.scss
+++ b/styles/components/breadcrumb.scss
@@ -1,5 +1,5 @@
 .gin-breadcrumb {
-  font-size: var(--ginFontSizeSmall);
+  font-size: 0;
   color: var(--colorGinText);
   padding: 0;
 
@@ -18,8 +18,9 @@
   &__item + &__item::before {
     content: "/";
     opacity: .3;
+    font-size: var(--ginFontSizeSmall);
     display: inline-block;
-    padding: 0 4px;
+    padding: 0 .5em;
     background: none;
   }
 
@@ -48,6 +49,7 @@
   }
 
   &__link {
+    font-size: var(--ginFontSizeSmall);
     line-height: 2; // make sure we have enough room for focus ring
     border-radius: var(--ginBorderTiny);
   }
